[project]
name = "gradheatmap"
version = "0.1.0"
description = "Simple Grad-CAM heatmap generator for TensorFlow/Keras models"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="AhmedAbdAlKareem1"}]
dependencies = [
    "tensorflow>=2.10",
    "numpy<2",
    "opencv-python>=4.7"
]
requires-python = ">=3.8"